--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       labels:
-        project: {{ .Release.Name }}   # Service will look for those PODS Labels!!!
+        project: {{ .Release.Name }}
     spec:
       containers:
         - name : {{ .Release.Name }}-flask
